# cpp-extract-patches

./: CMakeLists.txt  README.md
include/: extract_patches.hpp
src/: main.cpp
